resources/external-services/httpbin/httpbin-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-httpbin
  namespace: external
spec:
  selector:
    gateway-name: egress-httpbin
    gateway-type: egress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
