resources/external-services/httpbin/httpbin-redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-egress
spec:
  hosts:
    - httpbin.org
  gateways:
    - external/egress-external
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: httpbin.external.svc.cluster.local
            port:
              number: 80
    - match:
        - gateways:
            - external/egress-external
          port: 80
      route:
        - destination:
            host: httpbin.org
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-external
  namespace: external
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
